--- a/src/app/feature-modules/utilities/components/multi-checkbox/multi-checkbox.component.css
+++ b/src/app/feature-modules/utilities/components/multi-checkbox/multi-checkbox.component.css
@@ -10,5 +10,5 @@
 }
 
 .spanSpace {
-    margin: 0.2vw;
+    margin: 1.8vw;
 }
